--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.79.4",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.23.8"
   },
   "browserslist": {
     "production": [
