--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "lint": "eslint",
@@ -26,6 +28,11 @@
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8"
   },
+  "devDependencies": {
+    "gh-pages": "^6.2.0",
+    "react-app-rewired": "^2.2.1",
+    "resolve-url-loader": "^5.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,9 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-app-rewired": "^2.2.1",
-    "resolve-url-loader": "^5.0.0"
   }
 }
