Update homepage and app title

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "minesweeper",
   "version": "0.1.0",
+  "homepage": "https://timaxin.github.io/minesweeper",
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
