--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "gh-pages": "^6.2.0",
     "react-app-rewired": "^2.2.1",
     "resolve-url-loader": "^5.0.0"
